--- a/login/Assistant/Assistant/Views/Utility/List_name.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/List_name.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Assistant.Models.ListOfProducts
-@{
-    ViewData["Title"] = "List_name";
-}
+@{ ViewData["Title"] = "List_name"; }
 <div class="row">
     <div class="col-8">
         <h4>Podaj Nazwę Listy</h4>
@@ -9,45 +7,47 @@
     <div class="col-3">
         <input type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
     </div>
+
+</div>
+<div class="row mt-3"></div>
+<div class="row">
+    <div class="col-md-4">
+        <form asp-controller="Home" asp-action="Send_Name" method="post">
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+
+                <input asp-for="Name" class="form-control" id="Name" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+                <br />
+
+            </div>
+
+
+            <div class="form-group">
+
+                <button type="submit" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dalej</button>
+
+            </div>
+        </form>
+
     </div>
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-controller="Home" asp-action="Send_Name" method="post">
+</div>
+<style>
+    input[type=checkbox] {
+        /* Double-sized Checkboxes */
+        -ms-transform: scale(2); /* IE */
+        -moz-transform: scale(2); /* FF */
+        -webkit-transform: scale(2); /* Safari and Chrome */
+        -o-transform: scale(2); /* Opera */
+        transform: scale(2);
+        padding: 10px;
+    }
 
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-
-                    <input asp-for="Name" class="form-control" id="Name" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                    <br />
-
-                </div>
-
-
-                <div class="form-group">
-
-                    <button type="submit" class="btn btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dalej</button>
-
-                </div>
-            </form>
-
-        </div>
-    </div>
-    <style>
-        input[type=checkbox] {
-            /* Double-sized Checkboxes */
-            -ms-transform: scale(2); /* IE */
-            -moz-transform: scale(2); /* FF */
-            -webkit-transform: scale(2); /* Safari and Chrome */
-            -o-transform: scale(2); /* Opera */
-            transform: scale(2);
-            padding: 10px;
-        }
-
-        /* Might want to wrap a span around your checkbox text */
-        .checkboxtext {
-            /* Checkbox text */
-            font-size: 110%;
-            display: inline;
-        }
-    </style>
+    /* Might want to wrap a span around your checkbox text */
+    .checkboxtext {
+        /* Checkbox text */
+        font-size: 110%;
+        display: inline;
+    }
+</style>
